categories can now be added and removed, yet to fixed wrapping issues

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -3668,7 +3668,8 @@ input[type=number] {
   display: flex;
   flex-wrap: wrap;
   row-gap: 5px;
-  justify-content: space-between;
+  justify-content: right;
+  column-gap: 5px;
   align-items: center;
 }
 
